argocd/ingressroute.yaml
# ArgoCD web UI
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.minhnguyenle.net`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
    middlewares:
    - name: argocd-headers
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-headers
  namespace: argocd
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
